# skillworks

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASING.md  jsconfig.json  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
.pi/: settings.json
docs/: tauri-build.md
public/: App.jsx  api-shim.js  app.js  index.html  skill-editor.jsx  styles.css  theme.css
public/lib/: state.js  toasts.js
scripts/: build-tauri-sidecar.js  check-css-usage.js  rename-tauri-sidecar.js  sign-sidecar.sh  vite-dev.js
scripts/release/: .env.release.example  common.sh  create-release.sh  create-update-manifest.sh  release-linux.sh  release-macos.sh  release-windows.ps1
src/: core.js  mcp-server.js  server.js  sets.js
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_state.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: commands.rs  config.rs  frontmatter.rs  fs_atomic.rs  fs_helpers.rs  git_install.rs  imports.rs  marketplace.rs  mcp_register.rs  mod.rs  projects.rs  scan.rs  sets.rs  skills.rs  state.rs  symlinks.rs  targets.rs  types.rs
test/: core.test.js  mcp-server.test.js
test-results/visual-baseline-baseline-manage-empty-desktop/: error-context.md
test-results/visual-baseline-baseline-manage-empty-laptop/: error-context.md
test-results/visual-baseline-baseline-manage-empty-narrow/: error-context.md
test-results/visual-baseline-baseline-manage-empty-wide/: error-context.md
test-results/visual-baseline-baseline-manage-selected-desktop/: error-context.md
tests/: setup.js
tests/a11y/: all-tabs.spec.js  manage.spec.js
(+70 files in other folders)
