[package]
name = "skillworks-desktop"
version = "0.1.0"
description = "Skillworks desktop shell"
authors = ["Skillworks"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.149"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
