[package]
name = "skillworks-desktop"
version = "0.1.0"
description = "Skillworks desktop shell"
authors = ["Skillworks"]
edition = "2021"

[lib]
name = "skillworks_desktop"
path = "src/lib.rs"

[[bin]]
name = "skillworks-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs", "process", "rt-multi-thread", "macros"] }
thiserror = "2"
anyhow = "1"
serde_yaml = "0.9"
walkdir = "2"
glob = "0.3"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
scraper = "0.20"
url = "2"
hex = "0.4"
sha2 = "0.10"
sha1 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
tempfile = "3"
regex = "1"
once_cell = "1"
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
